<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityPlatos">

    <ImageView
        android:id="@+id/imagenSeleccionada"
        android:layout_width="184dp"
        android:layout_height="177dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="219dp"
        android:layout_marginTop="17dp"
        app:srcCompat="@drawable/suma"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageView
        android:id="@+id/imagenGuardada"
        android:layout_width="162dp"
        android:layout_height="130dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="459dp"
        android:visibility="visible"
        app:srcCompat="@drawable/touchlogo"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/seleccionarImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="248dp"
        android:text="@string/botonBuscar"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/nombreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imagenSeleccionada"
        android:layout_alignParentStart="true"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="-61dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textNoSuggestions|textCapSentences|textVisiblePassword"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="226dp" />

    <CheckBox
        android:id="@+id/checkBoxMañana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checkBoxTarde"
        android:layout_alignParentStart="true"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="-307dp"
        android:text="@string/checkMañana" />

    <CheckBox
        android:id="@+id/checkBoxTarde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/seleccionarImagen"
        android:layout_alignParentTop="true"
        android:layout_marginTop="307dp"
        android:layout_marginEnd="-6dp"
        android:text="@string/checkTarde"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="340dp" />

    <CheckBox
        android:id="@+id/checkBoxNoche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ingredientes"
        android:layout_alignEnd="@+id/seleccionarImagen"
        android:layout_marginTop="-49dp"
        android:layout_marginEnd="-12dp"
        android:text="@string/checkNoche"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="372dp" />

    <RadioGroup
        android:id="@+id/radioTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="250dp"
        android:layout_marginBottom="334dp"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="146dp">

        <RadioButton
            android:id="@+id/radioEntrada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radioEntrada" />

        <RadioButton
            android:id="@+id/radioPlatoFuerte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioPlatoFuerte" />

    </RadioGroup>

    <EditText
        android:id="@+id/tiempo"
        android:layout_width="167dp"
        android:layout_height="42dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="217dp"
        android:layout_marginBottom="475dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/tiempo"
        android:inputType="none"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="85dp" />

    <EditText
        android:id="@+id/precio"
        android:layout_width="116dp"
        android:layout_height="42dp"
        android:layout_alignEnd="@+id/nombreTextView"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="414dp"
        android:ems="10"
        android:hint="@string/Precio"
        android:inputType="number"
        tools:layout_editor_absoluteX="255dp"
        tools:layout_editor_absoluteY="228dp" />

    <EditText
        android:id="@+id/ingredientes"
        android:layout_width="194dp"
        android:layout_height="114dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="214dp"
        android:layout_marginTop="276dp"
        android:ems="10"
        android:hint="@string/Ingredientes"
        android:inputType="textFilter|textMultiLine" />

    <EditText
        android:id="@+id/informaciónGuardada"
        android:layout_width="194dp"
        android:layout_height="171dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="203dp"
        android:layout_marginTop="412dp"
        android:ems="10"
        android:hint="@string/InfoGuardada"
        android:inputType="none" />

    <Button
        android:id="@+id/botonGuardarInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="406dp"
        android:hint="@string/GuardarInfo"
        android:onClick="guardarInfo"
        android:text="Guardar Información" />


</RelativeLayout>